--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site settings
 title: Ja.Code
-brief-intro: 猿修地，时光机
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jacobpan3g.github.io" # the base hostname & protocol for your site
+brief-intro: Time alone will tell.
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "https://jacobpan3g.github.io" # the base hostname & protocol for your site
 
 motto: Follow Excellence. Success will chase you.
 
-description_footer: 时光沉淀于此！
+description_footer: Time deposits here！
 
 permalink: /:year/:month/:day/:title/
 
